--- a/src/components/DisplayLarge.scss
+++ b/src/components/DisplayLarge.scss
@@ -1,3 +1,4 @@
+
 .displayLargeContainer{
     position: absolute;
     top: 121px;
@@ -12,7 +13,7 @@
 .displayLargeFont {
     margin: 0;
     width: auto;
-    color: #FFFFFF;
+    color: #fff;
     font-size: 47px;
     font-weight: 300;
     text-align: right;
